samples/cr/v1/test/cumulocity-iot-edge-namespace.yaml
########################################################################################################################
#                                         Defines Kubernetes Namespace                                                 #
########################################################################################################################
---
#
# Creates 'cumulocity-iot-edge' namespace
#

apiVersion: v1
kind: Namespace
metadata:
  name: cumulocity-iot-edge
